welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: not found: value j
      if (j+i<T.length){setCouleurBrosse(T(j+i));
          ^Array2:15: error: not found: value j
      if (j+i<T.length){setCouleurBrosse(T(j+i));
                                           ^